# advent-of-code-2025

./: Cargo.toml
src/: main.rs
src/challenges/: mod.rs
src/challenges/day-01/: main.rs
src/challenges/day-02/: main.rs
src/challenges/day-03/: main.rs
src/challenges/day-04/: main.rs
src/challenges/day-05/: main.rs
src/challenges/day_01/: mod.rs
src/challenges/day_02/: mod.rs
src/challenges/day_03/: mod.rs
src/challenges/day_04/: mod.rs
src/challenges/day_05/: mod.rs
src/challenges/day_06/: mod.rs
src/challenges/day_07/: mod.rs
src/challenges/day_08/: mod.rs
src/challenges/day_09/: mod.rs
src/challenges/day_10/: mod.rs
src/challenges/day_11/: mod.rs
src/challenges/day_12/: mod.rs
src/helpers/: mod.rs
