[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day-01"
path = "src/challenges/day-01/main.rs"

[[bin]]
name = "day-02"
path = "src/challenges/day-02/main.rs"

[[bin]]
name = "day-03"
path = "src/challenges/day-03/main.rs"

[[bin]]
name = "day-04"
path = "src/challenges/day-04/main.rs"

[[bin]]
name = "day-05"
path = "src/challenges/day-05/main.rs"

[dependencies]
strum_macros = "0.27.2"
